dummy-http/istio/istio-vs.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dummy-http
spec:
  hosts:
  - "*"
  gateways:
  - dummy-http-gateway
  http:
  - route:
    - destination:
        host: dummy-http
