dummy-http/istio/istio.yml
--
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dummy-http-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dummy-http
spec:
  hosts:
  - "*"
  gateways:
  - dummy-http-gateway
  http:
  - route:
    - destination:
        host: dummy-http-server
